--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/angular.min.js"></script>
+    <script src="js/angular-route.min.js"></script>
+    <script src="app/app.js"></script>
+    <script src="js/validate.js"></script>
+    <script src="js/select.js"></script>
+    <link href="css/select.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
     <style type="text/css">
     ul>li, a{cursor: pointer;}
     </style>
@@ -37,9 +44,6 @@
    
 </div>
 </div>
-<script src="js/angular.min.js"></script>
-<script src="js/angular-route.min.js"></script>
-<script src="app/app.js"></script>
-<script src="js/validate.js"></script>
+
 </body>
 </html>
